fix: reduce gap in RadioGroup to 4px

--- a/packages/pelagos/src/components/RadioGroup.less
+++ b/packages/pelagos/src/components/RadioGroup.less
@@ -1,5 +1,5 @@
 @import '../../less/spacing';
 
 .RadioGroup {
-	gap: @sp-08;
+	gap: @sp-04;
 }
